Enable toc in index page

--- a/content/post/20220627.md
+++ b/content/post/20220627.md
@@ -6,16 +6,14 @@ draft: false
 
 ## 企業動向
 
-[群馬県が「メタバースワールドの企画・作成・運営」公募、予算250万円で個人も応募可 - Mogura VR News](https://www.moguravr.com/gunma-metaverse-world-public-appeal/)
+### [群馬県が「メタバースワールドの企画・作成・運営」公募、予算250万円で個人も応募可 - Mogura VR News](https://www.moguravr.com/gunma-metaverse-world-public-appeal/)
 > 群馬県がメタバースワールドの企画・作成・運営業務を行う個人・法人の公募を開始しました。予算は250万円を上限としており、業務の委託期間は2023年3月31日（金）までとなっています。
 
 
-[愛知県岡崎市、NTT西日本、一旗、メタバースを活用した文化観光のDX推進に関する連携協定を締結](https://digital-shift.jp/flash_news/FN220621_4)
+### [愛知県岡崎市、NTT西日本、一旗、メタバースを活用した文化観光のDX推進に関する連携協定を締結](https://digital-shift.jp/flash_news/FN220621_4)
 > 西日本電信電話株式会社 東海支店（以下、NTT西日本）は、観光分野において、メタバースやXR技術を活用して地域の課題解決を図る「デジタルトランスフォーメーション（DX）」を推進し、地域の観光課題の解決に連携して取り組むことを目的として、愛知県岡崎市・株式会社一旗と「文化観光のDX推進に関する連携協定」を締結したと発表した。
 
----
-
-[Z世代を取り込み狙う、メタバース内にソフトバンクショップがオープン - ケータイ Watch](https://k-tai.watch.impress.co.jp/docs/news/1419675.html)
+### [Z世代を取り込み狙う、メタバース内にソフトバンクショップがオープン - ケータイ Watch](https://k-tai.watch.impress.co.jp/docs/news/1419675.html)
 
 >ソフトバンクは、NAVER Zのメタバースプラットフォーム「ZEPETO」（ゼペット）にバーチャルショップ「ソフトバンクショップ in ZEPETO」をオープンした。
 >
@@ -23,10 +21,8 @@ draft: false
 
 * [ソフトバンクショップ in ZEPETO | スマートフォン・携帯電話 | ソフトバンク](https://www.softbank.jp/mobile/special/virtual-shop/?adid=anot_220623_twsn_m_r_o_x_0_22_0292&utm_source=twitter&utm_medium=social&utm_campaign=2022_anot&utm_content=22_0292)
 * [リアルとバーチャルが融合する世界がもうすぐやってくる？ ソフトバンクショップやPayPayドームのメタバース化の先にあるもの - ITをもっと身近に。ソフトバンクニュース](https://www.softbank.jp/sbnews/entry/20220623_02?utm_source=twsn&utm_medium=social&utm_campaign=sbns&utm_content=20220623_02)
----
 
-[「KOKUYOショップ」をメタバース上にオープン　人気の文具や家具を３Dで体験 | オフィスマガジン online](https://ofmaga.com/news.html?eid=03134)
-
+### [「KOKUYOショップ」をメタバース上にオープン　人気の文具や家具を３Dで体験 | オフィスマガジン online](https://ofmaga.com/news.html?eid=03134)
 
 >コクヨ株式会社が提供するバーチャルショッピングモール「メタパ🄬」に「KOKUYOショップ」をオープンいたします。
 >
@@ -39,45 +35,34 @@ draft: false
 
 ## その他トピック
 
-[Spotify Expands Roblox Universe With K-Pop-themed World](https://www.adweek.com/media/spotify-expands-its-roblox-universe-with-k-pop-themed-world/?utm_source=postup&utm_medium=email&utm_campaign=Adweek_Daily_220525054711&recip_id=1825341&lyt_id=1825341)
+### [Spotify Expands Roblox Universe With K-Pop-themed World](https://www.adweek.com/media/spotify-expands-its-roblox-universe-with-k-pop-themed-world/?utm_source=postup&utm_medium=email&utm_campaign=Adweek_Daily_220525054711&recip_id=1825341&lyt_id=1825341)
 > Adweek Reported that Spotify is building on its Roblox world with a “K-Park” devoted to K-Pop with themed lounges, cafes, and merch shops.
 
----
-
-[不登校専門のメタバースとゲームを活用したオンライン家庭教師「メタバ塾」が提供開始 - Digital Shift Times（デジタル シフト タイムズ） その変革に勇気と希望を](https://digital-shift.jp/flash_news/FN220626_2)
+### [不登校専門のメタバースとゲームを活用したオンライン家庭教師「メタバ塾」が提供開始 - Digital Shift Times（デジタル シフト タイムズ） その変革に勇気と希望を](https://digital-shift.jp/flash_news/FN220626_2)
 > メタバ塾は不登校の子どもを対象にしたメタバースとゲームによるオンライン家庭教師だ。興味関心による「探求」と新たな選択肢の「発見」を通し、次の一歩へのキッカケをサポートすることを目指している。元不登校経験者やゲームの造詣が深い講師が授業を担当し、不登校の子どもに伴走しながら挑戦や学びを支える。
 
----
-
-[英高級自動車ベントレー、NFTドロップを9月に実施へ](https://coinpost.jp/?p=362406)
+### [英高級自動車ベントレー、NFTドロップを9月に実施へ](https://coinpost.jp/?p=362406)
 > 高級自動車メーカーのベントレーモーターズ（ベントレー）は22日、NFT（非代替性トークン））領域への参入を発表。9月に「サステイナブル」なNFTのドロップを実施することを明かした。
 >
 > 今回のNFTドロップでは、208個のNFTが展開される予定で、ベントレーデザインが制作したユニークなアートワークを採用。
 
 * [ランボルギーニ、初のNFTコレクションとオークション販売を発表](https://coinpost.jp/?p=315491)
 * [フェラーリCEO、ブロックチェーンやNFTなど「Web3.0」技術に着目＝決算説明会](https://coinpost.jp/?p=318107)
----
 
-[18人の大学職員が1週間メタバースで働いてみた結果…2人は数時間で脱落 | Business Insider Japan](https://www.businessinsider.jp/post-255673)
+### [18人の大学職員が1週間メタバースで働いてみた結果…2人は数時間で脱落 | Business Insider Japan](https://www.businessinsider.jp/post-255673)
 > その実験は、18名の大学職員たちが、まるまる1週間メタバースにログインし続けるというものだった。このうち2人は、吐き気を発症して脱落し、残りの人たちもイライラや不安を感じ、最後には目が痛くなったとイギリスの週刊科学雑誌の『ニュー・サイエンテイスト（New Scientist）』は報じている。
 
----
-
-[L1チェーンのHarmonyがハッキング被害を公表、約135億円の不正流出](https://coinpost.jp/?p=362112)
+### [L1チェーンのHarmonyがハッキング被害を公表、約135億円の不正流出](https://coinpost.jp/?p=362112)
 > ブロックチェーン間の資産移動に利用される「ブリッジ」サービスの一つで23日、総額135億円（1億ドル）相当の暗号資産（仮想通貨）が不正流出したことが明らかになった。
 
----
-
-[京都市、メタバースでも財政難　閉鎖施設を仮想に「移設」も運営資金綱渡り（京都新聞） - Yahoo!ニュース](https://news.yahoo.co.jp/articles/8d9ccf3faeea828f3ee38489f431c6602b14af14)
+### [京都市、メタバースでも財政難　閉鎖施設を仮想に「移設」も運営資金綱渡り（京都新聞） - Yahoo!ニュース](https://news.yahoo.co.jp/articles/8d9ccf3faeea828f3ee38489f431c6602b14af14)
 > 京都市が仮想空間「メタバース」に開設した首都圏向けの情報発信拠点「京都館　PLUS　X（プラスエックス）」が本格的に稼働した。閉館した現実世界の常設施設の代わりとして地元産品の販売や観光客誘致を担うが、財政難の中、民間資金頼みの綱渡りの運営が続きそうだ。
 
 > 地価が高騰する東京にリアルな施設を再び設けることは困難と判断し、今年3月にバーチャルの拠点を構築した。
 
 > 今後、地元企業などが有料でPRに活用できる仕組みを整えるという。市クリエイティブ産業振興室は「リアルの宮下公園を利用する若い世代も含め、幅広く訪れてもらいたい。
 
----
-
-[養父市の魅力発信 インターネット上の仮想空間に市を再現｜NHK 兵庫県のニュース](https://www3.nhk.or.jp/lnews/kobe/20220624/2020018533.html)
+### [養父市の魅力発信 インターネット上の仮想空間に市を再現｜NHK 兵庫県のニュース](https://www3.nhk.or.jp/lnews/kobe/20220624/2020018533.html)
 > 養父市は、インターネット上の仮想空間に市内の観光地などを再現し、魅力を発信していくことになりました。
 >
 > この取り組みは、人口２万２０００人の養父市が地方創生一環として始めるもので、「メタバース」と呼ばれるインターネットの仮想空間に市内の様子を再現しました。
